# SeqKitSTP2025

./: Jenkinsfile  README.md  environment.yml  pyproject.toml  requirements.txt
SeqToolkit/: loger.py  logger.py
SeqToolkit/modules/: chunk_text.py  genbank_style.py  sequence_manipulation.py
SeqToolkit/utils/: entrez_efetch.py
tests/: test_chunk_test.py  test_genbank_styles.py  test_sequence_manipulation.py
