[project]
name = "SeqToolkit"
version = "0.0.1"
description = "Toolkit that manipulates DNA (and other) sequences"
license = {file = "LICENSE.txt"}
authors = [{name = "VariantValidator Contributors", email = "admin@variantvalidator.org"}]
readme = "README.md"
keywords = [
    "bioinformatics",
    "DNA Sequence",
]
requires-python = ">=3.11"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.11"
]

# Load dependencies
dependencies = [
  "coverage==7.9.2",
  "iniconfig==2.1.0",
  "packaging==25.0",
  "pluggy==1.6.0",
  "Pygments==2.19.2",
  "pytest==8.4.1",
  "pytest-cov==6.2.1",
  "setuptools==80.9.0",
  "wheel==0.45.1",
]


[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["."]  # Look for packages in the 'root' directory
include = ["SeqToolkit*"]

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"